--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,5 +1,5 @@
 @import "./home";
 @import "./auth";
 @import "./addbook";
-@import "./author-details";
-@import "./book-details";
+@import "./author";
+@import "./book";
